--- a/QuizGame/MainPage.xaml
+++ b/QuizGame/MainPage.xaml
@@ -5,31 +5,50 @@
 
     <ScrollView>
         <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+            Background="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource OffBlack}}">
+            <VerticalStackLayout 
+                HorizontalOptions="Fill">
+                <HorizontalStackLayout
+                    Spacing="0"
+                    HorizontalOptions="Center">
+                    <Label
+                        Text="Linked"
+                        Style="{StaticResource Headline}"
+                        VerticalOptions="Center"/>
+                    <Image
+                        Source="linkedin_logo.png"/>
+                </HorizontalStackLayout>
+                <Label
+                    Text="Skill assessment quizzes"
+                    Style="{StaticResource Headline}"/>
+            </VerticalStackLayout>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+            <Frame
+                BackgroundColor="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Primary}}"
+                BorderColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                CornerRadius="20"
+                HorizontalOptions="Fill"
+                Padding="0,0,0,0">
+                <VerticalStackLayout>
+                    <Label
+                        Text="Available topics"
+                        Style="{StaticResource SubHeadline}" 
+                        Padding="10,10,10,10"/>
+                    <Frame
+                        HorizontalOptions="Fill"
+                        BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Gray600}}"
+                        BorderColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                        CornerRadius="20"
+                        Padding="0,0,0,0">
+                        <VerticalStackLayout
+                            x:Name="butVerticalStackLayout"
+                            WidthRequest="200"
+                            Spacing="5"
+                            Padding="10,10,10,10">
+                        </VerticalStackLayout>
+                    </Frame>
+                </VerticalStackLayout>
+            </Frame>
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
