Started to implement question display.

--- a/QuizGame/AppShell.xaml
+++ b/QuizGame/AppShell.xaml
@@ -5,10 +5,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:QuizGame"
     Shell.FlyoutBehavior="Disabled"
-    Title="QuizGame">
+    Shell.BackgroundColor="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Black}}">
 
     <ShellContent
         ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Route="MainPage"/>
 
 </Shell>
