--- a/QuizGame/QuizPage.xaml
+++ b/QuizGame/QuizPage.xaml
@@ -2,18 +2,15 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             xmlns:local="clr-namespace:QuizGame.Views"
+             xmlns:views="clr-namespace:QuizGame.Views"
              x:Class="QuizGame.QuizPage">
 
-    <ContentPage.Behaviors>
-        <toolkit:EventToCommandBehavior
-            EventName="Appearing"
-            Command="{Binding AppearingCommand}" />
-    </ContentPage.Behaviors>
+    <Grid BackgroundColor="{AppThemeBinding Light={StaticResource Gray100}, Dark={StaticResource OffBlack}}"
+          VerticalOptions="Fill">
 
-    <ScrollView>
         <ContentView>
-            <local:QuestionView BindingContext="{Binding QuestionViewModel}"/>
+            <views:QuestionView x:Name="questionView"/>
         </ContentView>
-    </ScrollView>
+
+    </Grid>
 </ContentPage>
