--- a/QuizGame/Views/CodeSnippetView.xaml
+++ b/QuizGame/Views/CodeSnippetView.xaml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="QuizGame.Views.CodeSnippetView"
-             xmlns:converters="clr-namespace:QuizGame.Converters">
+             x:Class="QuizGame.Views.CodeSnippetView">
 
-    <ContentView.Resources>
-        <converters:TaskResultConverter x:Key="TaskResultConverter"/>
-    </ContentView.Resources>
-    
     <WebView 
-        BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource OffBlack}}"
+        BackgroundColor="{AppThemeBinding Light={StaticResource Gray100}, Dark={StaticResource OffBlack}}"
         IsVisible="{Binding IsVisible}" 
         WidthRequest="{Binding Width}" 
         HeightRequest="{Binding Height}">
         
         <WebView.Source>
-            <HtmlWebViewSource Html="{Binding Html2Display, Converter={StaticResource TaskResultConverter}}"/>
+            <HtmlWebViewSource Html="{Binding Html2Display}"/>
         </WebView.Source>
         
     </WebView>
