--- a/QuizGame/Views/QuestionView.xaml
+++ b/QuizGame/Views/QuestionView.xaml
@@ -18,17 +18,18 @@
             <Frame 
                 Grid.Row="0"
                 BackgroundColor="{AppThemeBinding Dark={StaticResource Black}, Light={StaticResource Primary}}"
-                   CornerRadius="30"
-                   Margin="10,10,10,10">
+                CornerRadius="30"
+                Margin="10,10,10,10">
                 <Label
-                        Text="{Binding Question.Text}"
-                        Style="{StaticResource SubHeadline}"
-                        VerticalOptions="Center" 
-                        HorizontalOptions="Center" />
+                    Text="{Binding DisplayedQuestion.Text}"
+                    Style="{StaticResource SubHeadline}"
+                    VerticalOptions="Center" 
+                    HorizontalOptions="Center" />
             </Frame>
+
             <Image 
                 Grid.Row="1"
-                Source="{Binding Question.ImagePath}" 
+                Source="{Binding DisplayedQuestion.ImagePath}" 
                 Aspect="AspectFit"/>
 
             <ContentView 
@@ -38,8 +39,8 @@
             </ContentView>
 
             <CollectionView
-                    Grid.Row="3"
-                    ItemsSource="{Binding AnswerViewModels}">
+                Grid.Row="3"
+                ItemsSource="{Binding AnswerViewModels}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
 
@@ -55,7 +56,8 @@
                 Grid.Row="4"
                 Text="Check Answer"
                 Command="{Binding NextCommand}"
-                CommandParameter="{Binding ., Source={RelativeSource Self}}"/>
+                CommandParameter="{Binding ., Source={RelativeSource Self}}"
+                HorizontalOptions="End"/>
         </Grid>
     </ScrollView>
 </ContentView>
