--- a/QuizGame/AppShell.xaml
+++ b/QuizGame/AppShell.xaml
@@ -4,9 +4,16 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:QuizGame"
+    xmlns:views="clr-namespace:QuizGame.Views"
     Shell.FlyoutBehavior="Disabled"
     Shell.BackgroundColor="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Black}}">
 
+    <Shell.TitleView>
+        <ContentView>
+            <views:HeaderView x:Name="headerView"/>
+        </ContentView>
+    </Shell.TitleView>
+    
     <ShellContent
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage"/>
