--- a/QuizGame/QuizPage.xaml
+++ b/QuizGame/QuizPage.xaml
@@ -4,12 +4,15 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:views="clr-namespace:QuizGame.Views"
              x:Class="QuizGame.QuizPage">
+    
+    <Shell.TitleView>
+        <views:HeaderView x:Name="headerView"/>
+    </Shell.TitleView>
+    
+    <Grid 
+        BackgroundColor="{AppThemeBinding Light={StaticResource Gray100}, Dark={StaticResource OffBlack}}">
 
-    <Grid BackgroundColor="{AppThemeBinding Light={StaticResource Gray100}, Dark={StaticResource OffBlack}}">
-
-        <ContentView>
-            <views:QuestionView x:Name="questionView"/>
-        </ContentView>
+        <views:QuestionView x:Name="questionView"/>
 
     </Grid>
 </ContentPage>
