--- a/QuizGame/Views/HeaderView.xaml
+++ b/QuizGame/Views/HeaderView.xaml
@@ -33,7 +33,8 @@
         </HorizontalStackLayout>
 
         <Button
-            Grid.Column="1">
+            Grid.Column="1" 
+            Command="{Binding ButtonClickedCommand}">
             <Button.ImageSource>
                 <FileImageSource File="{Binding HomeImagePath}"/>
             </Button.ImageSource>
